[tool.poetry]
name = "zenn"
version = "0.1.0"
description = ""
authors = ["hayatotagawa <h.tagawa8810sub@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ipykernel = "^6.29.2"
numpy = "^1.26.4"
polars = "^0.20.7"
plotly = "^5.18.0"
kaleido = "0.2.1"
nbformat = "^5.9.2"
pyreadstat = "^1.2.6"
pandas = "2.0.3"
pyarrow = "^15.0.0"
tabulate = "^0.9.0"
statsmodels = "^0.14.1"
scipy = "^1.12.0"
scikit-learn = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
